# backend/pkg/api/oas_validators_gen.go
@@ -1014,6 +1014,49 @@ func (s RbacRoleScope) Validate() error {
 	}
 }
 
+func (s *RegisteredWorker) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if value, ok := s.Status.Get(); ok {
+			if err := func() error {
+				if err := value.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "status",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
+func (s RegisteredWorkerStatus) Validate() error {
+	switch s {
+	case "online":
+		return nil
+	case "offline":
+		return nil
+	case "draining":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
+
 func (s StorageListOrderBy) Validate() error {
 	switch s {
 	case "created_at":
